<resources>
    <string name="app_name">My Saved</string>
    <string name="my_saved">My Saved</string>
    <string name="tv_allsaved">All Saved</string>
    <string name="tv_count">1</string>
    <string name="tv_job">Software Engineer</string>
    <string name="tv_time">Full-time</string>
    <string name="tv_location">Malabe,Colombo</string>
    <string name="tv_title">My Saved Jobs</string>
    <string name="et_name_reg">Enter Name</string>
    <string name="tv_Register">Register</string>
    <string name="et_email_reg">Enter Email</string>
    <string name="tv_spinnerD">Enter District</string>
    <string name="tv_city">Enter City</string>
    <string name="et_mobile">Enter Mobile Number</string>
    <string name="et_password">Enter Password</string>
    <string name="btn_acCeate">Create Account</string>
    <string name="tv_req_job_title">Request job title</string>
    <string name="tv_name">Name</string>
    <string name="tv_genderreqjob">Gender</string>
    <string name="tv_DescriptionReq">Description</string>
    <string name="btn_sendmail_reqjob">Email Me</string>
    <string name="btn_call_reqjob">Call Me</string>
    <string name="jobtitle">Jobtitle</string>
    <string name="tv_location_job">location</string>
    <string name="tv_jobtype_vjob">Job Type</string>
    <string name="tv_company_jv">Company</string>
    <string name="tv_salary_jv">Salary</string>
    <string name="tv_description_jobv">Description</string>
    <string name="tv_requiremnts_jv">Requirements</string>
    <string name="tv_publishdate">"Publish Date : "</string>
    <string name="tv_publishdate1">Publish Date</string>
    <string name="tv_email_jv">Email</string>
    <string name="btn_sendemail_jv">Send Email</string>
    <string name="btn_call_jv">Call</string>
    <string name="btn_email_jv">Send Email</string>
    <string name="tv_editjobc">Edit Job</string>
    <string name="et_name_editjob">Job title you want to request</string>
    <string name="et_name_editjob1">Name</string>
    <string name="et_age_editjob">Age</string>
    <string name="et_gender_editjob">Gender</string>
    <string name="et_description_editjob">Description</string>
    <string name="et_qualifications_editjob">Qualifications</string>
    <string name="et_email_editjob">Email</string>
    <string name="et_phone_editjob">Phone Number</string>
    <string name="btn_editjob">Edit</string>
    <string name="tv_job2">Software Engineer</string>
    <string name="tv_time2">Full Time</string>
    <string name="tv_location2">Malabe,Colombo</string>
    <string name="tv_job3">Graphic Design</string>
    <string name="tv_job4">.NET Engineer</string>
    <string name="tv_time3">Part time</string>
    <string name="tv_time4">Full Time</string>
    <string name="tv_createajob">Create a Job</string>
    <string name="et_company">Enter Company Name</string>
    <string name="et_title">Enter Job Title</string>
    <string name="et_salary">Enter Salary</string>
    <string name="et_description">Enter Job Description</string>
    <string name="et_email">Enter Email Address</string>
    <string name="et_phone">Enter Phone Number</string>
    <string name="tv_addimg">Add Image</string>
    <string name="btn_create">Create</string>
    <string name="requiredd">Image Can not be Edited!!!</string>
    <string name="tv_editjob">Edit Job</string>
    <string name="et_companyed">Enter Company Name</string>
    <string name="et_titleed">Enter Job Title</string>
    <string name="et_salaryed">Enter Salary</string>
    <string name="et_descriptioned">Enter Job Description</string>
    <string name="et_emailed">Enter Email Address</string>
    <string name="et_phoneed">Enter Phone Number</string>
    <string name="tv_addimged">Add Image</string>
    <string name="btn_edit">Edit</string>
    <string name="tv_mjl1">My Job Listings</string>
    <string name="btn_cn">Create New</string>
    <string name="tv_mrjl">My Requested Jobs</string>
    <string name="btn_newreq">New Request</string>
    <string-array name="job_type_sm">
        <item> Select Job Type</item>
        <item> Full Time</item>
        <item> Part Time</item>
        <item> Intern</item>
    </string-array>
    <string-array name="job_type_ddm">
        <item> Select Job Ty[pe</item>
        <item> Full Time</item>
        <item> Part Time</item>
        <item> Intern</item>
    </string-array>
    <string-array name="districts_sm">
        <item> Select District</item>
        <item> Ampara</item>
        <item> Anuradhapura</item>
        <item> Badulla</item>
        <item> Batticaloa</item>
        <item> Colombo</item>
        <item> Galle</item>
        <item> Gampaha</item>
        <item> Hambantota</item>
        <item> Jaffna</item>
        <item> Kalutara</item>
        <item> Kandy</item>
        <item> Kegalle</item>
        <item> Kilinochchi</item>
        <item> Kurunegala</item>
        <item> Mannar</item>
        <item> Matale</item>
        <item> Matara</item>
        <item> Monaragala</item>
        <item> Mullaitivu</item>
        <item> Nuwara Eliya</item>
        <item> Polonnaruwa</item>
        <item> Puttalam</item>
        <item> Ratnapura</item>
        <item> Trincomalee</item>
        <item> Vavuniya</item>
    </string-array>
    <string-array name="districts_smm">
        <item> Select District</item>
        <item> Ampara</item>
        <item> Anuradhapura</item>
        <item> Badulla</item>
        <item> Batticaloa</item>
        <item> Colombo</item>
        <item> Galle</item>
        <item> Gampaha</item>
        <item> Hambantota</item>
        <item> Jaffna</item>
        <item> Kalutara</item>
        <item> Kandy</item>
        <item> Kegalle</item>
        <item> Kilinochchi</item>
        <item> Kurunegala</item>
        <item> Mannar</item>
        <item> Matale</item>
        <item> Matara</item>
        <item> Monaragala</item>
        <item> Mullaitivu</item>
        <item> Nuwara Eliya</item>
        <item> Polonnaruwa</item>
        <item> Puttalam</item>
        <item> Ratnapura</item>
        <item> Trincomalee</item>
        <item> Vavuniya</item>
    </string-array>
    <string name="tv_location3">Keselwatta,Panadura</string>
    <string name="tv_job5">HR.Intern</string>
    <string name="tv_time5">Full Time</string>
    <string name="tv_location4">Horethuduwa,Moratuwa</string>
    <string name="tv_location5">Kaluwella,Galle</string>
    <string name="tv_title2">Requested Jods</string>
    <string name="btn_rq_jobs">Request a job</string>
    <string name="tv_job6">Iam open to work as a full stack developer</string>
    <string name="tv_gender">Male</string>
    <string name="tv_age">28 years old</string>
    <string name="tv_job7">I am looking for software engineering job </string>
    <string name="tv_gender2">Female</string>
    <string name="tv_age2">27 years old</string>
    <string name="tv_job8">Searching for a graphic designer job</string>
    <string name="tv_age3">24 years old</string>
    <string name="img_company1">picture of Company1</string>
    <string name="img_company2">picture of company2</string>
    <string name="img_company3">picture of company3</string>
    <string name="img_company4">picture of company4</string>
    <string-array name="testspin">
        <item>--Select City Area--</item>
        <item>-- City Area--</item>
        <item>-- Area--</item>
    </string-array>
    <string-array name="districts">
        <item>Select District</item>
        <item>Ampara</item>
        <item>Anuradhapura</item>
        <item>Badulla</item>
        <item>Batticaloa</item>
        <item>Colombo</item>
        <item>Galle</item>
        <item>Gampaha</item>
        <item>Hambantota</item>
        <item>Jaffna</item>
        <item>Kalutara</item>
    </string-array>
    <string-array name="gender">
        <item>Select Gender</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="txt_sign_in">Sign In</string>
    <string name="log_password_txt">Password</string>
    <string name="log_email_txt">Email</string>
    <string name="lg_button">Login</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="fgt_password">Forget Password?</string>
    <string name="txt_view">Request a Job</string>
    <string name="req_job">Enter the Job title you want to request</string>
    <string name="ent_name">Enter Name</string>
    <string name="ent_age">Enter Age</string>
    <string name="description">Enter Description about yourself</string>
    <string name="ent_email">Enter Email Address</string>
    <string name="ent_p_no">Enter Phone Number</string>
    <string name="add_image">Add Image</string>
    <string name="create_button">Create</string>
    <string name="txt_profile">Profile</string>
    <string name="verify_now_btn">Verify Now</string>
    <string name="txt_name">Name</string>
    <string name="txt_mobileno">Mobile No</string>
    <string name="txt_Gender">Gender</string>
    <string name="txt_district">District</string>
    <string name="txt_city">City</string>
    <string name="txt_email">Email</string>
    <string name="edit_user_btn">Edit</string>
    <string name="txt_editprofile">Edit Profile</string>
    <string name="edit_name_txt">Name</string>
    <string name="edit_Mno_txt">Mobile No</string>
    <string name="edit_email_txt">Email</string>
    <string name="update_user_btn">Update</string>
    <string name="Nav_login">Log In</string>
    <string name="nav_logout">Log Out</string>
    <string name="nav_home_txt">Home</string>
    <string name="nav_createjob_txt">Create  a Job</string>
    <string name="nav_myjobs_txt">My Jobs</string>
    <string name="nav_requestedjobs_txt">Requested Jobs</string>
    <string name="nav_myreqjobs_txt">My Requested Jobs</string>
    <string name="nav_savedjobs_txt">Saved Jobs</string>
    <string name="nav_profile_txt">Profile</string>
    <string name="tv_sign_in">Sign In</string>
    <string name="et_log_email">Email</string>
    <string name="et_log_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="tv_fgt_password">Forget Password?</string>
    <string name="tv_request_job">Request a Job</string>
    <string name="et_request_job">Enter the Job title you want to request</string>
    <string name="et_nameR">Enter Name</string>
    <string name="et_ageR">Enter Age</string>
    <string name="et_descriptionR">Enter Description about yourself</string>
    <string name="et_emailR">Enter Email Address</string>
    <string name="et_phone_noR">Enter Phone No</string>
    <string name="tv_add_image">Add Image</string>
    <string name="btn_createR">Create</string>
    <string name="btn_nav_login">Login</string>
    <string name="btn_nav_logout">Log out</string>
    <string name="tv_nav_home">Home</string>
    <string name="tv_nav_createjob">Create a Job</string>
    <string name="tv_nav_myjobs">My Jobs</string>
    <string name="tv_nav_requestedjobs">Requested Jobs</string>
    <string name="tv_nav_myreqjobs">My Requested Jobs</string>
    <string name="tv_nav_savedjobs">Saved Jobs</string>
    <string name="tv_nav_profile">Profile</string>
    <string name="tv_Profile">Profile</string>
    <string name="btn_verify_now">Verify Now</string>
    <string name="tv_nameP">Name :</string>
    <string name="tv_mobilenoP">Mobile No :</string>
    <string name="tv_genderP">Gender :</string>
    <string name="tv_districtP">District :</string>
    <string name="tv_emailP">Email :</string>
    <string name="btn_edit_user">Edit</string>
    <string name="tv_edit_profile">Edit Profile</string>
    <string name="tv_nameE">Name</string>
    <string name="tv_mobilenoE">Mobile No</string>
    <string name="tv_GenderE">Gender</string>
    <string name="tv_districtE">District</string>
    <string name="tv_emailE">Email</string>
    <string name="et_user_name">Name</string>
    <string name="et_user_Mno">Mobile No</string>
</resources>