<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NavigationBarActivity">


    <Button
        android:id="@+id/btn_nav_logout"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_red_border"
        android:onClick="logout"
        android:text="@string/btn_nav_logout"
        android:textAllCaps="false"
        android:textColor="@color/nav_logout"
        android:visibility="gone"
        app:backgroundTint="@color/btn_nav_logout"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/btn_nav_login"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_blue_border"
        android:onClick="login"
        android:text="@string/btn_nav_login"
        android:textAllCaps="false"
        android:textColor="@color/nav_login"
        android:visibility="visible"
        app:backgroundTint="@color/btn_nav_login"
        tools:ignore="OnClick" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:id="@+id/nav_home"
        android:onClick="navClickHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="OnClick">

        <TextView
            android:id="@+id/tv_nav_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/segoe_bold"
            android:padding="12dp"
            android:text="@string/tv_nav_home"
            android:textColor="@color/nav"
            android:textSize="25dp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:onClick="navClickCreateJob"
        android:id="@+id/nav_createjob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="OnClick">

        <TextView
            android:id="@+id/tv_nav_createjob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/segoe_bold"
            android:padding="12dp"
            android:text="@string/tv_nav_createjob"
            android:textColor="@color/nav"
            android:textSize="25dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:onClick="navClickMyjobs"
        android:id="@+id/nav_Myjobs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="OnClick">

        <TextView
            android:id="@+id/tv_nav_myjobs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/segoe_bold"
            android:padding="12dp"
            android:text="@string/tv_nav_myjobs"
            android:textColor="@color/nav"
            android:textSize="25dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:onClick="navClickRequestedjobs"
        android:id="@+id/nav_requestedjobs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="OnClick">

        <TextView
            android:id="@+id/tv_nav_requestedjobs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/segoe_bold"
            android:padding="12dp"
            android:text="@string/tv_nav_requestedjobs"
            android:textColor="@color/nav"
            android:textSize="25dp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:onClick="navClickMyreqjobs"
        android:id="@+id/nav_myrequestedjobs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="OnClick">

        <TextView
            android:id="@+id/tv_nav_myreqjobs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/segoe_bold"
            android:padding="12dp"
            android:text="@string/tv_nav_myreqjobs"
            android:textColor="@color/nav"
            android:textSize="25dp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:onClick="navClickSavedjobs"
        android:id="@+id/nav_myjobs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="OnClick,UsingOnClickInXml">

        <TextView
            android:id="@+id/tv_nav_savedjobs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/segoe_bold"
            android:padding="12dp"
            android:text="@string/tv_nav_savedjobs"
            android:textColor="@color/nav"
            android:textSize="25dp"
            android:textStyle="bold" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp" />

    <LinearLayout

        android:onClick="navClickProfile"
        android:id="@+id/nav_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="OnClick">

        <ImageView

            android:id="@+id/image_navigation_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/round_account_circle_20"
            tools:srcCompat="@drawable/round_account_circle_20" />

        <TextView
            android:id="@+id/tv_nav_profile"
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/segoe_bold"
            android:padding="12dp"
            android:text="@string/tv_nav_profile"
            android:textColor="@color/nav"
            android:textSize="25dp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>