<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditprofileActivity">

    <ImageView
        android:id="@+id/user_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_editprofile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24"
        tools:ignore="VectorDrawableCompat" />


    <TextView
        android:id="@+id/txt_editprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/segoe_bold"
        android:text="@string/txt_editprofile"
        android:textColor="@color/nav"
        android:textSize="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="56dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="174dp" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_name"
        android:textColor="@color/nav"
        app:layout_constraintBottom_toTopOf="@+id/txt_mobileno"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />


    <TextView
        android:id="@+id/txt_mobileno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_mobileno"
        android:textColor="@color/nav"
        app:layout_constraintBottom_toTopOf="@+id/txt_Gender"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <TextView
        android:id="@+id/txt_Gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_Gender"
        android:textColor="@color/nav"
        app:layout_constraintBottom_toTopOf="@+id/txt_district"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txt_mobileno" />

    <TextView
        android:id="@+id/txt_district"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_district"
        android:textColor="@color/nav"
        app:layout_constraintBottom_toTopOf="@+id/txt_city"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txt_Gender" />

    <TextView
        android:id="@+id/txt_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_city"
        android:textColor="@color/nav"
        app:layout_constraintBottom_toTopOf="@+id/txt_email"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txt_district" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_email"
        android:textColor="@color/nav"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/txt_city" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="587dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="225dp" />

    <TextView
        android:id="@+id/user_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_name_txt"
        app:layout_constraintBottom_toTopOf="@+id/user_Mno_txt"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <TextView
        android:id="@+id/user_Mno_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_Mno_txt"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/user_gender_txt"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/user_name_txt" />


    <Spinner
        android:id="@+id/user_gender_txt"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:background="@drawable/spinner_box"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toTopOf="@+id/user_District_txt"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/user_Mno_txt" />

    <Spinner
        android:id="@+id/user_District_txt"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:background="@drawable/spinner_box"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toTopOf="@+id/user_City_txt"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/user_gender_txt" />

    <Spinner
        android:id="@+id/user_City_txt"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:background="@drawable/spinner_box"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toTopOf="@+id/user_email_txt"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/user_District_txt" />

    <TextView
        android:id="@+id/user_email_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_email_txt"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/user_City_txt" />

    <Button
        android:id="@+id/update_user_btn"
        android:layout_width="105dp"
        android:layout_height="39dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/button_blue_border"
        android:text="@string/update_user_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/nav_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="16dp"
        android:layout_height="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/user_gender_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="@+id/user_gender_txt"
        app:layout_constraintTop_toTopOf="@+id/user_gender_txt"
        app:srcCompat="@drawable/round_arrow_drop_down_20"
        tools:ignore="MissingConstraints,VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="16dp"
        android:layout_height="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/user_District_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="@+id/user_District_txt"
        app:layout_constraintTop_toTopOf="@+id/user_District_txt"
        app:srcCompat="@drawable/round_arrow_drop_down_20"
        tools:ignore="MissingConstraints,VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="16dp"
        android:layout_height="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/user_City_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="@+id/user_City_txt"
        app:layout_constraintTop_toTopOf="@+id/user_City_txt"
        app:srcCompat="@drawable/round_arrow_drop_down_20"
        tools:ignore="MissingConstraints,VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/txt_editprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_editprofile"
        app:layout_constraintTop_toTopOf="@+id/txt_editprofile"
        app:srcCompat="@drawable/round_delete_forever_24"
        tools:ignore="VectorDrawableCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>